--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@
 
 /* Header Start */
 .Header_box{
-    background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)),url(assests/img/image_1.jpg);
+    background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)),url(src/img/image_1.jpg);
     background-repeat: no-repeat;
     background-size: 110%;
 
